--- a/index.html
+++ b/index.html
@@ -51,6 +51,41 @@
             <img id="arrow" class="mt-2" src="Portfolio/images/arrow.svg" alt="arrow icon" srcset="">
         </div>
     </section>
+    <section id="about" class="about container">
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde asperiores rerum inventore dolor omnis voluptates iure nemo maiores dolorum consequuntur dolores perspiciatis id quae blanditiis fugit, non temporibus accusantium porro tempora. Inventore quam explicabo voluptatem facere error, architecto veniam cum qui provident distinctio fugit, quae aliquam nesciunt dolore beatae temporibus adipisci culpa dignissimos! Pariatur earum quos, nisi vero aliquid at?</p>
+        <div class="about-exp">
+            <div class="about-exp-item">
+                <div class="about-exp-item-header">
+                    <div>
+                    <h5>Software Engineer</h5>
+                    <p>Coding Studio 2021-Now</p>
+                    </div>
+                    <button class="btn button" onclick="toggleDetail(event)">More Info</button>
+                </div>
+                <p class="about-exp-item-detail ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim eos quas corporis, quisquam necessitatibus quis odio ea porro perferendis est fugiat, dicta, rerum optio doloremque reprehenderit iure recusandae dolore? Distinctio.</p>
+            </div>
+            <div class="about-exp-item">
+                <div class="about-exp-item-header">
+                    <div>
+                    <h5>Software Engineer</h5>
+                    <p>Coding Studio 2021-Now</p>
+                    </div>
+                    <button class="btn button" onclick="toggleDetail(event)">More Info</button>
+                </div>
+                <p class="about-exp-item-detail ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim eos quas corporis, quisquam necessitatibus quis odio ea porro perferendis est fugiat, dicta, rerum optio doloremque reprehenderit iure recusandae dolore? Distinctio.</p>
+            </div>
+            <div class="about-exp-item">
+                <div class="about-exp-item-header">
+                    <div>
+                    <h5>Software Engineer</h5>
+                    <p>Coding Studio 2021-Now</p>
+                    </div>
+                    <button class="btn button" onclick="toggleDetail(event)">More Info</button>
+                </div>
+                <p class="about-exp-item-detail ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim eos quas corporis, quisquam necessitatibus quis odio ea porro perferendis est fugiat, dicta, rerum optio doloremque reprehenderit iure recusandae dolore? Distinctio.</p>
+            </div>
+        </div>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
