--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </div>
         </div>
     </section>
-    <section id="work" class="work container">
+    <section id="work" class="work container"> 
         <div class="row d-flex align-items-center">
             <div class="col">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates sit dolorum magni reiciendis id! Assumenda labore harum, illum odit aut quaerat expedita modi ex esse vel mollitia doloribus culpa, repellendus laudantium ut, impedit cupiditate! Sequi rem ratione debitis minus in laborum rerum excepturi corporis quasi, quidem ullam dolor, fugiat eos.</p>
@@ -101,6 +101,46 @@
                 <div id="work-3" class="work-img-item">
                     <img src="Portfolio/images/work-3.png" alt="work 3" >
                 </div>
+            </div>
+        </div>
+    </section>
+    <section id="contact" class="contact container">
+        <div class="row d-flex align-items-center gap-5">
+            <div class="col">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas alias autem quaerat delectus natus hic. Quisquam ab voluptatibus velit architecto recusandae, unde, quis, ullam alias eaque amet debitis commodi deleniti! Tempora ex sequi ad maxime commodi praesentium nostrum exercitationem inventore vel temporibus error hic molestiae, officia blanditiis rerum fugit cupiditate.</p>
+                <div class="row">
+                    <div class="col d-flex align-items-center">
+                        <img src="Portfolio/images/Facebook.svg" alt="facebook icon">
+                        <p>John Doe</p>
+                    </div>
+                    <div class="col d-flex align-items-center">
+                        <img src="Portfolio/images/Instagram.svg" alt="instagram icon">
+                        <p>John Doe</p>
+                    </div>
+                    <div class="col d-flex align-items-center">
+                        <img src="Portfolio/images/Twitter.svg" alt="twitter icon">
+                        <p>John Doe</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <form class="contact-form" onsubmit="onFormSubmit(event)">
+                    <div class="mb-3">
+                      <label for="inp_email" class="form-label">Email address</label>
+                      <input type="email" class="form-control" id="inp_email" placeholder="example@gmail.com" required> 
+                    </div>
+                    <div class="mb-3">
+                      <label for="inp_subject" class="form-label">Subject</label>
+                      <input type="text" class="form-control" id="inp_subject" placeholder="Your Subject" required>
+                    </div>
+                    <div class="mb-3">
+                      <label class="form-label" for="inp_message">Message</label>
+                      <input type="text" class="form-control" id="inp_message" placeholder="Your Message" required>
+                    </div>
+                    <div class="d-flex justify-content-center mt-5">
+                        <button type="submit" class="btn button">Submit</button>
+                    </div>
+                  </form>
             </div>
         </div>
     </section>
