--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
     </section>
     <section id="work" class="work container"> 
         <div class="row d-flex align-items-center gap-5">
-            <div class="col-12 col-5">
+            <div class="col-12 col-md-5">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates sit dolorum magni reiciendis id! Assumenda labore harum, illum odit aut quaerat expedita modi ex esse vel mollitia doloribus culpa, repellendus laudantium ut, impedit cupiditate! Sequi rem ratione debitis minus in laborum rerum excepturi corporis quasi, quidem ullam dolor, fugiat eos.</p>
             </div>
-            <div class="col-12 col-6 work-img">
+            <div class="col-12 col-md-6 work-img">
                 <div id="work-1" class="work-img-item">
                     <img src="Portfolio/images/work-1.png" alt="work 1" >
                 </div>
